--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "pac-file-tester",
-  "version": "0.0.7",
+  "version": "1.0.0",
   "description": "Test PAC files for performance and results",
   "main": "lib/pac-file-tester.js",
   "scripts": {
-    "test": "./node_modules/.bin/nyc --reporter=html --reporter=text mocha tests/*.js",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "test": "jest",
+    "prepublishOnly": "tsc"
   },
   "keywords": [
     "pac",
@@ -20,13 +20,12 @@
     "ip": "^1.1.5"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "coveralls": "^3.0.3",
-    "grunt": "^1.0.4",
-    "grunt-cli": "^1.3.2",
-    "grunt-shell": "^3.0.1",
-    "mocha": "^6.0.2",
-    "nyc": "^13.3.0"
+    "@types/ip": "^1.1.0",
+    "@types/jest": "^24.0.23",
+    "@types/node": "^12.12.9",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.1.0",
+    "typescript": "^3.7.2"
   },
   "bin": {
     "pac-file-tester": "bin/pac-file-tester.js"
