--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ip": "^1.1.5"
   },
   "devDependencies": {
+    "@arcath/utils": "^1.4.0",
     "@types/ip": "^1.1.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
