--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "pac-file-tester",
-  "version": "1.2.0",
+  "version": "0.0.0-semantiically-released",
   "description": "Test PAC files for performance and results",
   "main": "lib/pac-file-tester.js",
   "scripts": {
     "test": "jest",
-    "build": "tsc"
+    "build": "tsc",
+    "run": "tsc && node ./bin/pac-file-tester.js"
   },
   "keywords": [
     "pac",
@@ -15,19 +16,19 @@
   "license": "MIT",
   "dependencies": {
     "benchmark": "^2.1.4",
-    "commander": "^7.2.0",
+    "commander": "^8.2.0",
     "dns-sync": "^0.2.1",
     "download-file": "^0.1.5",
     "ip": "^1.1.5"
   },
   "devDependencies": {
-    "@arcath/utils": "^1.4.0",
+    "@arcath/utils": "^1.7.0",
     "@types/ip": "^1.1.0",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^15.12.4",
-    "jest": "^27.0.4",
-    "ts-jest": "^27.0.3",
-    "typescript": "^4.3.4"
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.1",
+    "jest": "^27.3.0",
+    "ts-jest": "^27.0.7",
+    "typescript": "^4.4.4"
   },
   "bin": {
     "pac-file-tester": "bin/pac-file-tester.js"
